# ChangeLog for x11-misc/winwrangler
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 May 2010; James Rowe <jnrowe@gmail.com> winwrangler-0.2.4-r1.ebuild:
  Keyworded amd64.

*winwrangler-0.2.4-r1 (04 Apr 2010)

  04 Apr 2010; James Rowe <jnrowe@gmail.com> +winwrangler-0.2.4-r1.ebuild,
  +files/winwrangler-0.2.4-no_gtkhotkey.patch, metadata.xml:
  Add support for disabling gtkhotkey daemon.

  08 Mar 2010; James Rowe <jnrowe@gmail.com> winwrangler-0.2.4.ebuild:
  Keyworded x86.

  08 Mar 2010; James Rowe <jnrowe@gmail.com> winwrangler-0.2.4.ebuild:
  Keyworded amd64.

  08 Feb 2010; James Rowe <jnrowe@gmail.com> winwrangler-0.2.4.ebuild:
  Mark docs for compression.

*winwrangler-0.2.4 (06 Feb 2010)

  06 Feb 2010; James Rowe <jnrowe@gmail.com> +winwrangler-0.2.4.ebuild,
  +metadata.xml:
  Initial ebuild, by me. Suggested by Patrick Sauvé.
