@@ -1,22 +1,0 @@
-=x11-libs/gtkhotkey-0.2* x11-libs/libwnck dev-util/intltool dev-util/pkgconfig
-=x11-libs/gtkhotkey-0.2* x11-libs/libwnck
-0
-http://launchpad.net/winwrangler/0.2/0.2.4/+download/winwrangler-0.2.4.tar.gz
-
-https://launchpad.net/winwrangler
-LGPL-3
-WM agnostic tool to perform window tiling
-amd64 x86
-versionator
-
-
-
-
-2
-
-configure install
-
-
-
-
-
