@@ -6,7 +6,7 @@ http://launchpad.net/winwrangler/0.2/0.2.4/+download/winwrangler-0.2.4.tar.gz
 https://launchpad.net/winwrangler
 LGPL-3
 WM agnostic tool to perform window tiling
-amd64 ~x86
+amd64 x86
 autotools eutils libtool multilib portability toolchain-funcs versionator
 daemon
 
