@@ -1,4 +1,3 @@
-REM 2010-05-04 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 x11-misc/winwrangler-0.2.4-r1 %a
 REM 2010-05-04 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/astral-0.2 %a
 REM 2010-05-05 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-vcs/gitserve-0.2.0-r1 %a
 REM 2010-05-05 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-vcs/gitserve-0.2.0-r1 %a
