@@ -3,14 +3,13 @@ Hash: SHA1
 
 AUX winwrangler-0.2.4-no_gtkhotkey.patch 5774 RMD160 f9fd25dba8c8c9a226dd20707ad7f07c2a417832 SHA1 8a61d3611ef0808d8c4777d100e74208db5c0fbf SHA256 1d444339edb20a559009b637650e35d06d7d2d9c0ed35a3e2cc8e58523ca2d24
 DIST winwrangler-0.2.4.tar.gz 336076 RMD160 d39fcc297088426901763466ca66d2d2f90033c8 SHA1 d8304c38948ce5cf38463624f7a8070b538e2ff5 SHA256 eca4d7d0763c88ac51bb61cabfa20da69594ef5278285ebd92434ce2cfec9d1f
-EBUILD winwrangler-0.2.4-r1.ebuild 1008 RMD160 6c3e2f7c9ed6687aa9e2b3721b814e3874e8dc8f SHA1 986aca7924d4fe8aac7c5830f531f22bde706850 SHA256 5e7564bc77cae6f03ea955de694c51caf6bcbb266e2d56891df4bee01deb020e
-EBUILD winwrangler-0.2.4.ebuild 865 RMD160 b2dab17db91c5e0712766266d66d87aa6016345b SHA1 3e677e8168dea0f12a1fe1a8289c691dd098ae21 SHA256 cbb0aadca18dfecf098e595b6e5a1b54397fe7f15b2b8b88d9321957050adfde
-MISC ChangeLog 894 RMD160 706c13145739d1d6829178e0c420137e428f5d45 SHA1 b6e2fc27a5bce7e8c95e06926aff346520fda609 SHA256 6d88d102f62e877e844c09f4ec34a76ad3f3a02837100dc4015fe99debdcbcaa
+EBUILD winwrangler-0.2.4-r1.ebuild 1007 RMD160 a2714a1cd2824e8166cbad6a4d9081a8c78ff789 SHA1 ba95db058564ddc9e299f25494df103ade52c574 SHA256 90bf995fe6f85704ecfa41e86748f0beacd1eb818165547e30ad755a10df8dc3
+MISC ChangeLog 1015 RMD160 22191e829d8c1e23ed896c4f2ba625ea70f04015 SHA1 2930d2c36001e7502f614a21a07e119a50abfe94 SHA256 4c2f57ff687aedc39ca1cfc39dbdebb9dee2357638b382fd26774a2e18f92aa6
 MISC metadata.xml 950 RMD160 5231d5bc1927154ee42bb736f1688ec1af185b6e SHA1 28bb9e552a8e48a3a6eed7748d55c8dce1556d32 SHA256 9fc8e588187c4de2ce6fb002150ffeaf5dc0c5acb11d31c61d243dd0d9466712
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvfkt0ACgkQzJrj3cAXR0mTiACgpzha4hcNWKBRIT0LoB8e9DOM
-rr4AoLkXxzi8pXnWxgdL+DSrNih9G80q
-=V9zI
+iEYEARECAAYFAkvfmysACgkQzJrj3cAXR0kEsQCeJfumOHJKd1im4VcMUBsAEr4u
+R0sAoKFsLkdUQAdxwHoSwjPxPJBdcSxc
+=cpt3
 -----END PGP SIGNATURE-----
