@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 May 2010; James Rowe <jnrowe@gmail.com> -winwrangler-0.2.4.ebuild,
+  winwrangler-0.2.4-r1.ebuild:
+  Keyworded x86.
+
   04 May 2010; James Rowe <jnrowe@gmail.com> winwrangler-0.2.4-r1.ebuild:
   Keyworded amd64.
 
